# sentencepiece

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml  cross_build.yml  wheel.yml
.github/workflows/requirements/: base.txt  cibuildwheel.txt
python/: build_bundled.sh  setup.py
python/src/sentencepiece/: sentencepiece.i  sentencepiece_wrap.cxx
python/test/: sentencepiece_test.py
src/: CMakeLists.txt  bpe_model_test.cc  bpe_model_trainer.cc  bpe_model_trainer.h  bpe_model_trainer_test.cc  builder.cc  builder.h  builder_test.cc  char_model_test.cc  char_model_trainer.cc  char_model_trainer.h  char_model_trainer_test.cc  common.h  compile_charsmap_main.cc  error.cc  filesystem.cc  filesystem.h  filesystem_test.cc  freelist_test.cc  init.h  model_factory_test.cc  model_interface.cc  model_interface.h  model_interface_test.cc  normalizer.cc  normalizer.h  normalizer_test.cc  pretokenizer_for_training.h  pretokenizer_for_training_test.cc  sentencepiece_processor.cc  sentencepiece_processor.h  sentencepiece_processor_test.cc  sentencepiece_trainer.cc  sentencepiece_trainer.h  sentencepiece_trainer_test.cc  spec_parser.h  spm_encode_main.cc  spm_train_main.cc  testharness.cc  trainer_factory_test.cc  (+16 more)
